# P3

./: .gitignore  Makefile  README.md  graphs.py  meson.build  prueba.f0  prueba.f01
pitch_db/train/: rl002.f0  rl004.f0  rl006.f0  rl008.f0  rl010.f0  rl012.f0  rl014.f0  rl016.f0  rl018.f0  rl020.f0  rl022.f0  rl024.f0  rl026.f0  rl028.f0  rl030.f0  rl032.f0  rl034.f0  rl036.f0  rl038.f0  rl040.f0  rl042.f0  rl044.f0  rl046.f0  rl048.f0  rl050.f0  sb002.f0  sb004.f0  sb006.f0  sb008.f0  sb010.f0  sb012.f0  sb014.f0  sb016.f0  sb018.f0  sb020.f0  sb022.f0  sb024.f0  sb026.f0  sb028.f0  sb030.f0  (+10 more)
scripts/: meson.build  run_get_pitch.sh
src/doxyfile/: Doxyfile.in
src/get_pitch/: commands  get_pitch.cpp  meson.build  pitch_analyzer.cpp  pitch_analyzer.h  pitch_evaluate.cpp
src/include/ffft/: meson.build
src/pav/: meson.build
